2012-02-06  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* java/net/DatagramSocket.java:
	(connect(InetAddress,int)): Add missing security
	checks which OpenJDK performs and we don't.  It's
	possible to initialise a DatagramSocket with null
	so we should also ensure we are bound.

2012-02-01  Andrew John Hughes  <ahughes@redhat.com>

	* resource/gnu/java/locale/LocaleInformation.properties,
	* resource/gnu/java/locale/LocaleInformation_ar.properties,
	* resource/gnu/java/locale/LocaleInformation_az.properties,
	* resource/gnu/java/locale/LocaleInformation_be.properties,
	* resource/gnu/java/locale/LocaleInformation_bg.properties,
	* resource/gnu/java/locale/LocaleInformation_bn.properties,
	* resource/gnu/java/locale/LocaleInformation_ca.properties,
	* resource/gnu/java/locale/LocaleInformation_cs.properties,
	* resource/gnu/java/locale/LocaleInformation_cy.properties,
	* resource/gnu/java/locale/LocaleInformation_da.properties,
	* resource/gnu/java/locale/LocaleInformation_de.properties,
	* resource/gnu/java/locale/LocaleInformation_ee.properties,
	* resource/gnu/java/locale/LocaleInformation_el.properties,
	* resource/gnu/java/locale/LocaleInformation_en.properties,
	* resource/gnu/java/locale/LocaleInformation_en_Dsrt.properties,
	* resource/gnu/java/locale/LocaleInformation_en_Shaw.properties,
	* resource/gnu/java/locale/LocaleInformation_es.properties,
	* resource/gnu/java/locale/LocaleInformation_fa.properties,
	* resource/gnu/java/locale/LocaleInformation_fi.properties,
	* resource/gnu/java/locale/LocaleInformation_fil.properties,
	* resource/gnu/java/locale/LocaleInformation_fr.properties,
	* resource/gnu/java/locale/LocaleInformation_gaa.properties,
	* resource/gnu/java/locale/LocaleInformation_he.properties,
	* resource/gnu/java/locale/LocaleInformation_hi.properties,
	* resource/gnu/java/locale/LocaleInformation_hr.properties,
	* resource/gnu/java/locale/LocaleInformation_hu.properties,